# chat-langchain

./: .gitignore  chain.py  ingest.py  main.py  pyproject.toml
chat-langchain/app/: layout.tsx
chat-langchain/app/components/: ChatWindow.tsx  EmptyState.tsx
